Complete OrderDetail index form

--- a/myprojects/CSS Frameworks/BootstrapPOS/itemManage.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/itemManage.html
@@ -108,45 +108,45 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <th scope="row">#01</th>
+                    <th scope="row">I001</th>
                     <td>Insuline Syringes</td>
                     <td>2000</td>
                     <td>500 Syringes</td>
                 </tr>
                 <tr>
-                    <th scope="row">#02</th>
+                    <th scope="row">I002</th>
                     <td>Bon Appetite</td>
                     <td>1100</td>
                     <td>100 Bottles</td>
                 </tr>
                 <tr>
-                    <th scope="row">#03</th>
+                    <th scope="row">I003</th>
                     <td>Lexotrim Oralususp</td>
                     <td>870</td>
                     <td>30 Bottles</td>
                 </tr>
                 <tr>
-                    <th scope="row">#04</th>
+                    <th scope="row">I004</th>
                     <td>Baby Care Gripe Water</td>
                     <td>1220</td>
                     <td>100 Bottles</td>
                 </tr>
                 <tr>
-                    <th scope="row">#05</th>
+                    <th scope="row">I005</th>
                     <td>Leximoxoral Susp</td>
                     <td>620</td>
                     <td>20 Bottles</td>
                 </tr>
 
                 <tr>
-                    <th scope="row">#06</th>
+                    <th scope="row">I006</th>
                     <td></td>
                     <td></td>
                     <td></td>
                 </tr>
 
                 <tr>
-                    <th scope="row">#07</th>
+                    <th scope="row">I007</th>
                     <td></td>
                     <td></td>
                     <td></td>
