--- a/myprojects/CSS Frameworks/BootstrapPOS/orderDetails.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/orderDetails.html
@@ -44,9 +44,119 @@
     </div>
 </nav>
 
-<main>
+<main class="container-fluid">
+
+<section class="row">
+    <div class="card col-5">
+        <div class="card-header  bg-success ">
+            Invoice Details
+        </div>
+
+        <div class="card-body">
+
+        <div class=" row">
+        <div class="col-6 ">
+        <label class="fw-bold" for="orderId" class="form-label">Order Id</label>
+        <input type="text" class="form-control w-50" id="orderId" placeholder="Order Id"></div>
+
+
+        <div class="col-6">
+        <label class="fw-bold" for="date" class="form-label">Date</label>
+        <input type="text" class="form-control w-50" id="date" placeholder="Date"></div>
+
+         <div class="col-6">
+         <label class="fw-bold" for="customerId" class="form-label">Customer Id</label>
+         <input type="text" class="form-control w-50" id="customerId" placeholder="Customer Id"></div>
+
+        <div class="col-6">
+        <label class="fw-bold" for="customerName" class="form-label">Customer Name</label>
+        <input type="text" class="form-control w-50" id="customerName" placeholder="Customer Name"></div>
+        </div>
+
+        <label class="fw-bold" for="customerSalary" class="form-label">Customer Salary</label>
+        <input type="text" class="form-control w-50" id="customerSalary" placeholder="Customer Name">
+
+        <label class="fw-bold" for="customerAddress" class="form-label">Customer Address</label>
+        <input type="text" class="form-control w-50" id="customerAddress" placeholder="Customer Address">
+        </div>
+    </div>
+
+
+    <div class="card col-5 m-auto">
+        <div class="card-header bg-success">
+            Invoice Details
+        </div>
+
+        <div class="card-body ">
+            <div class=" row">
+                <div class="col-6 ">
+                    <label class="fw-bold" for="item" class="form-label">Item</label>
+                    <input type="text" class="form-control w-50" id="item" placeholder="Item"></div>
+
+
+                <div class="col-6">
+                    <label class="fw-bold" for="itemCode" class="form-label">Item Code</label>
+                    <input type="text" class="form-control w-50" id="itemCode" placeholder="Item I001"></div>
+
+                <div class="col-6">
+                    <label class="fw-bold" for="itemName" class="form-label">Item Name</label>
+                    <input type="text" class="form-control w-50" id="itemName" placeholder="Item Name"></div>
+
+                <div class="col-6">
+                    <label class="fw-bold" for="price" class="form-label">Price</label>
+                    <input type="text" class="form-control w-50" id="price" placeholder="Price"></div>
+            </div>
+
+            <label class="fw-bold" for="orderQuantity" class="form-label">Order Quantity</label>
+            <input type="text" class="form-control w-50" id="orderQuantity" placeholder="Order Quantity">
+
+        </div>
+    </div>
+
+
+
+</section>
+
+
+
+
+
+
+
+    <table class="table table table-bordered border-dark mt-5">
+        <thead>
+        <tr>
+            <th scope="col">Item Code</th>
+            <th scope="col">Item Name</th>
+            <th scope="col">Price</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">Total</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+        </tr>
+        <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+        </tr>
+        <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+        </tr>
+        </tbody>
+    </table>
 
 </main>
+
 
 <footer class="container-fluid">
     <div>
