--- a/myprojects/CSS Frameworks/BootstrapPOS/orderDetails.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/orderDetails.html
@@ -135,22 +135,24 @@
         </thead>
         <tbody>
         <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+            <th scope="row">I010</th>
+            <td>Surgical spirits</td>
+            <td>320</td>
+            <td>2</td>
+            <td>640</td>
+
         </tr>
         <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+            <th scope="row"></th>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
         <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+            <th scope="row"></th>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
         </tbody>
     </table>
