--- a/myprojects/CSS Frameworks/BootstrapPOS/orderDetails.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/orderDetails.html
@@ -46,8 +46,8 @@
 
 <main class="container-fluid">
 
-<section class="row">
-    <div class="card col-5">
+<section class="row m-1" >
+    <div class="card col-5 bg-light">
         <div class="card-header align-content-center bg-success">
             Invoice Details
         </div>
@@ -87,7 +87,7 @@
             Invoice Details
         </div>
 
-        <div class="card-body ">
+        <div class="card-body bg-light ">
             <div class=" row">
                 <div class="col-6 ">
                     <label class="fw-bold" for="item" class="form-label">Item</label>
@@ -115,8 +115,8 @@
 
 </section>
 
-<section class="row">
-    <div class="card mt-5 col-6">
+<section class="row m-1" >
+    <div class="card mt-5 col-6 bg-light">
 
         <div class="card-body ">
 
