--- a/myprojects/CSS Frameworks/BootstrapPOS/index.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/index.html
@@ -12,7 +12,7 @@
 <!--Nav Bar-->
 <nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand mb-0 h1" href="home.html">
+    <a class="navbar-brand mb-0 h1" href="index.html">
       <img src="assets/Images/Logo1.jpg" alt="Logo of Store" width="40" height="30" class="d-inline-block align-text-top">
      Capsule
     </a>
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="home.html">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="customerManage.html">Manage Customer</a>
