--- a/myprojects/CSS Frameworks/BootstrapPOS/customerManage.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/customerManage.html
@@ -109,31 +109,31 @@
             </thead>
             <tbody>
             <tr>
-                <th scope="row">C001</th>
-                <td>Devika Wijemanna</td>
-                <td>No.14, Silver Road,Kapuhempala,Galle.</td>
-                <td>0705480548</td>
-            </tr>
-            <tr>
-                <th scope="row">C002</th>
-                <td>Renuka Priyadarshanai</td>
-                <td>No.30, Mampitiya,Kalegana Rd, Galle.</td>
-                <td>0766807962</td>
-            </tr>
-            <tr>
-                <th scope="row">COO3</th>
-                <td>Amathi Madushika</td>
-                <td>no.58, Kapuhempala Rd, Galle.</td>
-                <td>0710188898</td>
-            </tr>
-            <tr>
-                <th scope="row">COO4</th>
+                <th scope="row"></th>
                 <td></td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
-                <th scope="row">COO5</th>
+                <th scope="row"></th>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th scope="row"></th>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th scope="row"></th>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th scope="row"></th>
                 <td></td>
                 <td></td>
                 <td></td>
