--- a/myprojects/CSS Frameworks/BootstrapPOS/itemManage.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/itemManage.html
@@ -108,45 +108,45 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <th scope="row">I001</th>
-                    <td>Insuline Syringes</td>
-                    <td>2000</td>
-                    <td>500 Syringes</td>
+                    <th scope="row"></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <th scope="row">I002</th>
-                    <td>Bon Appetite</td>
-                    <td>1100</td>
-                    <td>100 Bottles</td>
+                    <th scope="row"></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <th scope="row">I003</th>
-                    <td>Lexotrim Oralususp</td>
-                    <td>870</td>
-                    <td>30 Bottles</td>
+                    <th scope="row"></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <th scope="row">I004</th>
-                    <td>Baby Care Gripe Water</td>
-                    <td>1220</td>
-                    <td>100 Bottles</td>
+                    <th scope="row"></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <th scope="row">I005</th>
-                    <td>Leximoxoral Susp</td>
-                    <td>620</td>
-                    <td>20 Bottles</td>
-                </tr>
-
-                <tr>
-                    <th scope="row">I006</th>
+                    <th scope="row"></th>
                     <td></td>
                     <td></td>
                     <td></td>
                 </tr>
 
                 <tr>
-                    <th scope="row">I007</th>
+                    <th scope="row"></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+
+                <tr>
+                    <th scope="row"></th>
                     <td></td>
                     <td></td>
                     <td></td>
