--- a/myprojects/CSS Frameworks/BootstrapPOS/orderDetails.html
+++ b/myprojects/CSS Frameworks/BootstrapPOS/orderDetails.html
@@ -176,27 +176,27 @@
         </thead>
         <tbody>
         <tr>
-            <th scope="row">I010</th>
-            <td>Surgical spirits</td>
-            <td>320</td>
-            <td>2</td>
-            <td>640</td>
+            <th scope="row"></th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
 
         </tr>
         <tr>
             <th scope="row"></th>
-            <td> ---</td>
-            <td> ---</td>
-            <td> --- </td>
-            <td> --- </td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
 
         </tr>
         <tr>
             <th scope="row"></th>
-            <td>---</td>
-            <td>---</td>
-            <td>---</td>
-            <td>---</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
 
         </tr>
         </tbody>
