--- a/myprojects/SPA/index.html
+++ b/myprojects/SPA/index.html
@@ -90,7 +90,7 @@
   <section id="customerPage" style="display: none">
     <section class="row" >
 
-      <div class="col-5">
+      <div class="col-5 m-5">
         <form id="my-form"  width="60px">
           <div class="mb-auto">
             <label class="fw-bold" for="customerID" class="form-label">Customer ID</label>
@@ -150,31 +150,31 @@
         </thead>
         <tbody>
         <tr>
-          <th scope="row">C001</th>
-          <td>Devika Wijemanna</td>
-          <td>No.14, Silver Road,Kapuhempala,Galle.</td>
-          <td>0705480548</td>
-        </tr>
-        <tr>
-          <th scope="row">C002</th>
-          <td>Renuka Priyadarshanai</td>
-          <td>No.30, Mampitiya,Kalegana Rd, Galle.</td>
-          <td>0766807962</td>
-        </tr>
-        <tr>
-          <th scope="row">COO3</th>
-          <td>Amathi Madushika</td>
-          <td>no.58, Kapuhempala Rd, Galle.</td>
-          <td>0710188898</td>
-        </tr>
-        <tr>
-          <th scope="row">COO4</th>
+          <th scope="row"></th>
           <td></td>
           <td></td>
           <td></td>
         </tr>
         <tr>
-          <th scope="row">COO5</th>
+          <th scope="row"></th>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th scope="row"></th>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th scope="row"></th>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th scope="row"></th>
           <td></td>
           <td></td>
           <td></td>
@@ -189,7 +189,7 @@
   <section id="itemPage" style="display: none">
   <section class="row" >
 
-    <div class="col-5">
+    <div class="col-5 m-5">
       <form id="myForm"  width="60px">
         <div class="mb-auto">
           <label class="fw-bold" for="itemCode" class="form-label">Item Code</label>
@@ -249,45 +249,45 @@
       </thead>
       <tbody>
       <tr>
-        <th scope="row">I001</th>
-        <td>Insuline Syringes</td>
-        <td>2000</td>
-        <td>500 Syringes</td>
+        <th scope="row"></th>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
-        <th scope="row">I002</th>
-        <td>Bon Appetite</td>
-        <td>1100</td>
-        <td>100 Bottles</td>
+        <th scope="row"></th>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
-        <th scope="row">I003</th>
-        <td>Lexotrim Oralususp</td>
-        <td>870</td>
-        <td>30 Bottles</td>
+        <th scope="row"></th>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
-        <th scope="row">I004</th>
-        <td>Baby Care Gripe Water</td>
-        <td>1220</td>
-        <td>100 Bottles</td>
+        <th scope="row"></th>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
-        <th scope="row">I005</th>
-        <td>Leximoxoral Susp</td>
-        <td>620</td>
-        <td>20 Bottles</td>
+        <th scope="row"></th>
+        <td></td>
+        <td></td>
+        <td>/td>
       </tr>
 
       <tr>
-        <th scope="row">I006</th>
+        <th scope="row"></th>
         <td></td>
         <td></td>
         <td></td>
       </tr>
 
       <tr>
-        <th scope="row">I007</th>
+        <th scope="row"></th>
         <td></td>
         <td></td>
         <td></td>
@@ -300,7 +300,7 @@
 <!--  Order Details Page-->
   <section id="orderPage" style="display: none">
   <section class="row m-1" >
-    <div class="card col-5 bg-light">
+    <div class="card col-5 bg-light m-5">
       <div class="card-header align-content-center bg-success">
         Invoice Details
       </div>
@@ -423,27 +423,27 @@
     </thead>
     <tbody>
     <tr>
-      <th scope="row">I010</th>
-      <td>Surgical spirits</td>
-      <td>320</td>
-      <td>2</td>
-      <td>640</td>
+      <th scope="row"></th>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
 
     </tr>
     <tr>
       <th scope="row"></th>
-      <td> ---</td>
-      <td> ---</td>
-      <td> --- </td>
-      <td> --- </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
 
     </tr>
     <tr>
       <th scope="row"></th>
-      <td>---</td>
-      <td>---</td>
-      <td>---</td>
-      <td>---</td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
 
     </tr>
     </tbody>
@@ -452,7 +452,7 @@
 
 </main>
 
-  <footer class="container-fluid">
+<footer class="container-fluid">
     <div>
       <p><b><small>Copyright © 2022 Samadhi Nilakshana All rights reserved.</small></b></p>
     </div>
